# opencrypto

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-tests.yml
examples/: simple_ma_bot.py
opencrypto/: __init__.py
opencrypto/backtest/: __init__.py  engine.py
opencrypto/core/: __init__.py  base_strategy.py  config.py  data_bridge.py  exceptions.py  position_manager.py  shield_guard.py
opencrypto/indicators/: __init__.py  smart_money.py  technical.py
opencrypto/plugins/: charts.py  llm.py  telegram.py
tests/: test_core.py
